# haskell-halogen

./: .gitignore  CHANGELOG.md  NOTICE  README.md  cabal-ghcjs-9.12.project  cabal-ghcjs.project  cabal-wasm.project  hascript-core.cabal  haskell-halogen-core.cabal  run_dev_server-9.10.sh  run_dev_server.sh  run_dev_server_minify.sh  run_fourmolu.sh  run_tests.sh
app/: Main.hs
dev/: index.html  index.js
jsbits/: monad_dom.js
src/: HPrelude.hs  Halogen.hs
src/Clay/Extra/: Grid.hs
src/Control/Monad/: Fork.hs  Parallel.hs  UUID.hs
src/Control/Monad/State/: Prim.hs
src/Control/Monad/State/Delayed/: Class.hs  Delayer.hs  Trans.hs
src/DOM/HTML/: Indexed.hs
src/Data/: Foreign.hs  MediaType.hs  MutVarF.hs  NT.hs
src/Data/Foreign/: JS.hs  Stub.hs  WASM.hs
src/Halogen/: Component.hs  HTML.hs  Portal.hs  Query.hs  Subscription.hs  VDom.hs
src/Halogen/Aff/: Driver.hs  Util.hs
src/Halogen/Aff/Driver/: Eval.hs  State.hs
src/Halogen/Component/: Debounced.hs
src/Halogen/Data/: Slot.hs
src/Halogen/HTML/: Core.hs  Elements.hs  Events.hs  Layout.hs  Properties.hs
src/Halogen/HTML/Layout/: BorderLayout.hs  BoxLayout.hs  GridBagLayout.hs  GridLayout.hs  NoLayout.hs
src/Halogen/HTML/Properties/: ARIA.hs
src/Halogen/IO/: Driver.hs  Util.hs
src/Halogen/IO/Driver/: Eval.hs  State.hs
src/Halogen/Query/: ChildQuery.hs  Event.hs  HalogenM.hs  HalogenQ.hs  Input.hs
src/Halogen/Svg/: Attributes.hs  Elements.hs  Indexed.hs
src/Halogen/VDom/: DOM.hs  Driver.hs  Machine.hs  Thunk.hs  Types.hs  Utils.hs
src/Halogen/VDom/DOM/: Monad.hs  Prop.hs
src/Halogen/VDom/DOM/Monad/: Common.hs  JS.hs  WASM.hs
src/Hascript/: Component.hs  Html.hs  Monad.hs  Query.hs  Subscription.hs
src/Hascript/Data/: Slot.hs
src/Hascript/Html/: IProp.hs  Indexed.hs  Prop.hs
src/Hascript/VDom/: Build.hs  Machine.hs  Utils.hs  VDom.hs
src/Web/: Clipboard.hs
src/Web/Clipboard/: ClipboardEvent.hs
src/Web/Clipboard/ClipboardEvent/: EventTypes.hs
src/Web/DOM/: Element.hs  Monad.hs  ParentNode.hs  Types.hs
src/Web/DOM/Internal/: Types.hs
src/Web/Event/: Event.hs
src/Web/Event/Internal/: Types.hs
src/Web/HTML/: Common.hs  HTMLDocument.hs
src/Web/HTML/Event/: DragEvent.hs  EventTypes.hs
src/Web/HTML/Event/DragEvent/: EventTypes.hs
src/Web/HTML/HTMLDocument/: ReadyState.hs
src/Web/UIEvent/: ClipboardEvent.hs  DragEvent.hs  FocusEvent.hs  KeyboardEvent.hs  MouseEvent.hs  PointerEvent.hs  TouchEvent.hs  WheelEvent.hs
src/Web/UIEvent/FocusEvent/: EventTypes.hs
src/Web/UIEvent/KeyboardEvent/: EventTypes.hs
src/Web/UIEvent/MouseEvent/: EventTypes.hs
src/Web/UIEvent/WheelEvent/: EventTypes.hs
test/: Test.hs
