cabal-version:      3.0
name:               haskell-halogen-core
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Mateusz Goślinowski
maintainer:         mateusz.goslinowski@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Control.Monad.Fork
      Control.Monad.Parallel
      Control.Monad.UUID
      Data.Foreign
      Data.MutVarF

      Halogen.VDom
      Halogen.Data.Slot

      Halogen.Aff.Driver
      Halogen.Aff.Driver.Eval
      Halogen.Aff.Driver.State

      Halogen.HTML.Core
      Halogen.HTML.Elements
      Halogen.HTML.Properties

      Halogen.Query.ChildQuery
      Halogen.Query.Event
      Halogen.Query.Input
      Halogen.Query.HalogenM
      Halogen.Query.HalogenQ

      Halogen.VDom.DOM
      Halogen.VDom.DOM.Monad
      Halogen.VDom.DOM.Prop
      Halogen.VDom.Machine
      Halogen.VDom.Utils
      Halogen.VDom.Types

      Halogen.Component
      Halogen.Subscription

      Web.DOM.Internal.Types
      Web.DOM.Element
      Web.Event.Internal.Types
      Web.Event.Event
      Web.HTML.Common
      Web.UIEvent.MouseEvent
      
    default-extensions:
      RankNTypes
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      FunctionalDependencies
      FlexibleContexts
      FlexibleInstances
      UndecidableInstances
      GADTs
      DeriveFunctor
      DerivingStrategies
      NoImplicitPrelude
      KindSignatures
      DataKinds
      OverloadedStrings
      TypeOperators
      LambdaCase
      TypeFamilies
      OverloadedRecordDot
      RecordWildCards
      NamedFieldPuns
      DuplicateRecordFields
      PartialTypeSignatures
      DefaultSignatures
      StandaloneKindSignatures
      NoFieldSelectors

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base, free, transformers, mtl, text, protolude, extra, random,
      row-types, hashable, containers, kan-extensions, uuid-types, primitive, unliftio, safe-exceptions
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options: -Wall -Wextra -Wcompat -Wno-partial-type-signatures



test-suite Halogen-core-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base
