cabal-version:      3.0
name:               haskell-halogen-core
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Mateusz Goślinowski
maintainer:         mateusz.goslinowski@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common commons
  build-depends:    
      base, free, transformers, mtl, text, protolude, extra, random, time, bytestring, stm, deepseq, unordered-containers, async,
      row-types, hashable, containers, kan-extensions, uuid-types, unliftio, safe-exceptions
  
  default-language: GHC2021
  ghc-options: -Wall -Wextra -Wcompat -Wno-partial-type-signatures

  default-extensions:
      RankNTypes
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      FunctionalDependencies
      FlexibleContexts
      FlexibleInstances
      UndecidableInstances
      GADTs
      DeriveFunctor
      DerivingStrategies
      NoImplicitPrelude
      KindSignatures
      DataKinds
      OverloadedStrings
      TypeOperators
      LambdaCase
      TypeFamilies
      OverloadedRecordDot
      RecordWildCards
      NamedFieldPuns
      DuplicateRecordFields
      PartialTypeSignatures
      DefaultSignatures
      StandaloneKindSignatures
      NoFieldSelectors
      DerivingVia
      CPP
      StrictData

library
    import: commons

    exposed-modules:
      Control.Monad.Fork
      Control.Monad.Parallel
      Control.Monad.State.Delayed.Class
      Control.Monad.State.Delayed.Delayer
      Control.Monad.State.Delayed.Trans
      Control.Monad.State.Prim
      Control.Monad.UUID
      Data.Foreign
      Data.MediaType
      Data.NT

      DOM.HTML.Indexed

      Halogen

      Halogen.VDom
      Halogen.Data.Slot

      Halogen.Aff.Driver
      Halogen.Aff.Driver.Eval
      Halogen.Aff.Driver.State
      Halogen.Aff.Util

      Halogen.HTML
      Halogen.HTML.Core
      Halogen.HTML.Elements
      Halogen.HTML.Events
      Halogen.HTML.Properties

      Halogen.Query
      Halogen.Query.ChildQuery
      Halogen.Query.Event
      Halogen.Query.Input
      Halogen.Query.HalogenM
      Halogen.Query.HalogenQ

      Halogen.VDom.DOM
      Halogen.VDom.DOM.Monad
      Halogen.VDom.DOM.Prop
      Halogen.VDom.Driver
      Halogen.VDom.Machine
      Halogen.VDom.Utils
      Halogen.VDom.Thunk
      Halogen.VDom.Types

      Halogen.Component
      Halogen.Component.Debounced
      Halogen.Subscription

      Web.Clipboard
      Web.Clipboard.ClipboardEvent
      Web.Clipboard.ClipboardEvent.EventTypes

      Web.DOM.Internal.Types
      Web.DOM.Element
      Web.DOM.ParentNode
      Web.Event.Internal.Types
      Web.Event.Event
      Web.HTML.Common
      Web.HTML.Event.DragEvent
      Web.HTML.Event.DragEvent.EventTypes
      Web.HTML.Event.EventTypes
      Web.HTML.HTMLDocument
      Web.HTML.HTMLDocument.ReadyState
      Web.UIEvent.FocusEvent
      Web.UIEvent.FocusEvent.EventTypes
      Web.UIEvent.KeyboardEvent
      Web.UIEvent.KeyboardEvent.EventTypes
      Web.UIEvent.MouseEvent
      Web.UIEvent.MouseEvent.EventTypes
      Web.UIEvent.PointerEvent
      Web.UIEvent.TouchEvent
      Web.UIEvent.WheelEvent
      Web.UIEvent.WheelEvent.EventTypes
      
    other-modules:
      HPrelude
    
    hs-source-dirs:   src

    if arch(javascript)
      js-sources:
        jsbits/monad_dom.js

executable halogen-core-prototype
  import: commons
  main-is:          Main.hs
  build-depends:    haskell-halogen-core
  hs-source-dirs:   app

test-suite Halogen-core-test
    import: commons
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    haskell-halogen-core
